new branch addedfile

--- a/0_test_installation.ipynb
+++ b/0_test_installation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f65270b7",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,8 @@
     }
    ],
    "source": [
-    "2+2"
+    "2+2\n",
+    "tests "
    ]
   },
   {
